TODO:
	Tidy up jquery.sceditor.js code - Will break compatibility as functions need renaming, ect.
	Maybe add an onpaste handler to filter pasted text (would be good for BBCode)
	Add XHTML output support
	Better theme support and switching
	Add ability to resize images in browsers that don't have native WYSIWYG resize
	Add ability to modify tables in browsers that don't have native WYSIWYG table editing
	Make FF insert new paragraphs instead of newlines

Version 1.3.0:


Version 1.2.9:
	Started on improving accessibility
	Added charset option
	Updated quote command to support authors
	Fix Webkit based bug causing newlines not to be added sometimes
		- Thanks to Robin for reporting and extra help providing information
	Added Swedish translation kindly submitted by Robin
	Added French translation kindly submitted by Nicolas
	Fix extra newlines being included in quotes
	Removed undo/redo commands as they cause Safari to reopen closed tabs if they have been closed
		after the point being undone.
		- This happens with other editors and also on plain HTML text inputs. Thanks to Robin for finding and reporting.
	Fixed header (h1, h2, h3, ect.) releated BBCode bug
	Removed Undo/Redo images from the sprite
	Small tweak to BBCode parser to improve IE UX
	Make BBCode parser strip unsused whitespace to improve copying HTML from websites
	Fix newline problem with [code] tag
	Started adding unit tests to what can be tested
		- WYSIWYG will still need manual testing as faking user input is ugly or just not possible
	Fix IE < 8 newlines bug

Version 1.2.8:
	Updated to use contentEditable if supported. This fixes some selection issues in IE9
	Fixed problem with YouTube videos hiding after switching between WYSIWYG and source modes
	Added new build page
	Fixed bug causing quotes with author attributes to lose their content
	Fixed HTML5 form required attribute compatiblity
	Added destroy function to enable removing the editor