@@ -18,6 +18,7 @@
 		<script src="../languages/de.js"></script>
 		
 		<script type="text/javascript" src="utills.js"></script>
+		<script type="text/javascript" src="sceditor.js"></script>
 		<script type="text/javascript" src="bbcode.js"></script>
 	</head>
 	<body>
