@@ -2,12 +2,18 @@ TODO:
 	Tidy up jquery.sceditor.js code - Will break compatibility as functions need renaming, ect.
 	Maybe add an onpaste handler to filter pasted text (would be good for BBCode)
 	Add XHTML output support
-	Better theme support and switching
+	More themes and maybe switching?
 	Add ability to resize images in browsers that don't have native WYSIWYG resize
 	Add ability to modify tables in browsers that don't have native WYSIWYG table editing
 	Make FF insert new paragraphs instead of newlines
+	Maybe use rangy to improve buggy ranges and simplify code,
+		or make a smaller implmenation (rangy is 42kb which
+		is about the size of the whole editor)
 
 Version 1.3.0:
+	Add package.json file
+	Add Contribute to README
+	Add GitHub pages page
 
 
 Version 1.2.9:
